--- a/style.css
+++ b/style.css
@@ -34,6 +34,15 @@ body {
     margin-top: 20px;
 }
 
+#calculator-container {
+    max-width: 500px;
+    background: #1F2937;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 15px;
+}
+
 
 
 /* FOOTER */
