--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ body {
     font-size: 20px;
 }
 
+#buttons-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    padding: 25px;
+}
 
 
 /* FOOTER */
