--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@ body {
     background-color: var(--active-gray);
 }
 
+.dot {
+    font-size: 30px;
+}
+
+.operator {
+    background-color: var(--universal-orange-color);
+}
 
 /* FOOTER */
 #footer {
